[package]
name = "tokimo-dev"
version = "0.1.0"
edition = "2024"
description = "Cross-platform port operations native addon"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.6", default-features = false, features = ["napi9", "async"] }
napi-derive = "3.5.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_System_Threading",
  "Win32_Foundation",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
strip = "symbols"
